[tool.poetry]
name = "messyger"
version = "0.1.0"
description = "Messy Messenger client"
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
esprima = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
