[tool.poetry]
name = "messyger"
version = "0.1.0"
description = "Messy Messenger client"
authors = ["Radian LLC <contact+messyger@radian.codes>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.2"
esprima = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
